8 make reports controller (#36)
* added fillables to report model

* Create ReportRequest.php

* Create ReportController.php

* routes for reports

* corrected routes for reports

* deleted whitespaces in routes

* corrected validation

* user is now required for creating reports

* content not message

* report schema

* Update ReportController.php

* swagger annotations

* Update api-docs.json

* corrected api paths in docs

* fixed the route for reports post request in docs

---------
